2009-12-31 Borut Razem <borut.razem AT siol.net>

	* sdcc/as/link/lkarea.c, sdcc/as/link/lkdata.c, sdcc/as/link/lklist.c,
	  sdcc/as/link/lks19.c, sdcc/as/link/lkmain.c, sdcc/as/link/lkeval.c,
	  sdcc/as/link/lklibr.c, sdcc/as/link/lkaomf51.c, sdcc/as/link/lkhead.c,
	  sdcc/as/link/lklex.c, sdcc/as/link/lkrloc.c, sdcc/as/link/aslink.h:
	  sync with aslink 2.0
	* sdcc/as/link/lks19.c: include "sdld.c"
	* sdcc/as/link/aslink.dsp: cleaning
	* sdcc/as/link/aslink.h: changed the type Character Type Definitions to char

2009-12-25 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* src/hc08/gen.c: fixed bug 2912013

2009-12-25 Jesus Calvino-Fraga <jesusc AT ece.ubc.ca>

	* as/link/aslink.dsp, as/link/sdld_all.dsp: fixed destination path of
	sdld.exe, sdldz80.exe, sdldgb.exe, and sdld6808.exe
	
2009-12-21 Borut Razem <borut.razem AT siol.net>

	* Makefile.in: fixed hc08
	* Makefile.in, as/link/Makefile.in: fixed installation

2009-12-20 Borut Razem <borut.razem AT siol.net>

	* as/link/lkmain.c, as/link/lksdcclib.c,
	  as/link/lklib.c, as/link/lklex.c, as/link/aslink.h:
	  fixed "o" file extension for z80 and gb targets

2009-12-19 Borut Razem <borut.razem AT siol.net>

	* configure, Makefile.in, configure.in, as/link/Makefile.in,
	  all.dsp, as/link/aslink.dsp, as/link/sdld_all.dsp,
	  as/link/lkmain.c, as/link/lkgb.c, as/link/lkihx.c,
	  as/link/sdld.c, as/link/sdld.h, as/link/lkmem.c,
	  as/link/clean.mk, as/link/lkrloc.c: modified
	  as/link/lkarea.c, as/link/readme.390, conf.mk, aslink.dsp:
	  moved from as/link/mcs51,
	  as/link/z80, as/link/mcs51, as/link/hc08: removed,
	  unification of lkarea.c, one polymorphic sdld
	* as/asxxsrc/sdas.h, as/asxxsrc/sdas.c:
	  renamed TRAGET_IS_XXXX to TARGET_ID_XXXX
	* .version, doc/sdccman.lyx: bumped version to 2.9.5

2009-12-18 Frieder Ferlemann <Frieder.Ferlemann AT web.de>

	* device/lib/abs.c, device/lib/labs.c: assembler version 
	  for mcs51, other targets slightly shorter too